I updated the sources for the html and javascript src to the root folder instead of src folder

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <button onclick="calculateBMI()"id="Calculate">Calculate</button>
     <div id="results"></div>
 
-    <script src="./assets/js/bmiCalculator.js"></script>
-    <script src="./assets/js/bmiUI.js"></script>
+    <script src="src/assets/js/bmiCalculator.js"></script>
+    <script src="src/assets/js/bmiUI.js"></script>
 </body>
 </html>
